--- a/sensor-viewer/index.html
+++ b/sensor-viewer/index.html
@@ -1,5 +1,22 @@
-hello <b>world</b>
+<html>
+    <head>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <div style="width:auto; margin:0 auto;text-align: center;">
+            <div class="glow">PARCO LEONARDO</div>
+            <br/><br/><br/><br/>
+            <div style="margin: 10% auto; padding: 60px; background-color: #fff9;">
+                <h1>Qualità dell'aria</h1>
+                <br/><br/>
+                presenza di materiale particolato aerodisperso
+                <br/><br/>
+                <div style="margin: 30px; padding: 10px; background-color: #fff4;">PM10<br/><h2>54μg/m³</h2></div>
+                <div style="margin: 30px; padding: 10px; background-color: #fff4;">PM2.5<br/><h2>19μg/m³</h2></div>
+            </div>
+            
+        </div>
+        
+    </body>
+</html>
 
-<br/>
-<br/>
-<img src="images/pl.jpg" width="640" height="640"/>
