--- a/sensor-viewer/index.html
+++ b/sensor-viewer/index.html
@@ -54,7 +54,7 @@
 
                 <div style="margin: 10px; padding: 10px; background-color: #fff4;"><h2>PM25<br/><div id="pm25-value">--</div></h2>soglia da non superare - 25 &#956;g/m&#179;</div>
                 
-                ultimo aggiornamento <i id="now-value">--/--/---- --:--</i><br/>
+                ultimo aggiornamento <b><i id="now-value">--/--/---- alle --:--</i></b><br/>
                 <b id="err-value" style="color: red;"></b>
             </div>
         </div>
