--- a/sensor-viewer/index.html
+++ b/sensor-viewer/index.html
@@ -41,18 +41,16 @@
     <body onload="loadData()">
         <div style="width:auto; margin:0 auto;text-align: center;">
             <div class="glow">PARCO LEONARDO</div>
-            <br/><br/>
-            <div style="margin: 10% auto; padding: 30px; background-color: #fff9;">
+            <div style="margin: 10% auto; padding: 30px; background-color: #fff7;">
                 <h1>Qualit&aacute; dell'aria</h1>
-                <br/>
                 presenza di materiale particolato aerodisperso in via Bernini, Fiumicino con sensore Nova SDS011
                 <br/><br/>
-                <div style="margin: 10px; padding: 10px; background-color: #fff4;">
+                <div style="margin: 10px; padding: 10px; background-color: #fffA;">
                     <h2>PM10<br/><div id="pm10-value">--</div></h2>
                     soglia da non superare - 50 &#956;g/m&#179;
                 </div>
 
-                <div style="margin: 10px; padding: 10px; background-color: #fff4;"><h2>PM25<br/><div id="pm25-value">--</div></h2>soglia da non superare - 25 &#956;g/m&#179;</div>
+                <div style="margin: 10px; padding: 10px; background-color: #fffA;"><h2>PM25<br/><div id="pm25-value">--</div></h2>soglia da non superare - 25 &#956;g/m&#179;</div>
                 
                 ultimo aggiornamento <b><i id="now-value">--/--/---- alle --:--</i></b><br/>
                 <b id="err-value" style="color: red;"></b>
