--- a/sensor-viewer/index.html
+++ b/sensor-viewer/index.html
@@ -43,7 +43,7 @@
             <div class="glow">PARCO LEONARDO</div>
             <div style="margin: 10% auto; padding: 30px; background-color: #fff7;">
                 <h1>Qualit&aacute; dell'aria</h1>
-                presenza di materiale particolato aerodisperso in via Bernini, Fiumicino con sensore Nova SDS011
+                presenza di materiale particolato aerodisperso in via Bernini, Fiumicino misurato con un Raspberry PI e sensore Nova SDS011
                 <br/><br/>
                 <div style="margin: 10px; padding: 10px; background-color: #fffA;">
                     <h2>PM10<br/><div id="pm10-value">--</div></h2>
